<resources>
    //Global
    <string name="app_name">Food Lab</string>

    //Home Screen
    <string name="calender_btn">Calender</string>
    <string name="recipes_btn">Recipes</string>
    <string name="groceries_btn">Groceries</string>
    <string name="ingredients_btn">Ingredients</string>

    //Calender Screen
    <string name="week_txt">Week:</string>
    <string name="day_txt">Day:</string>
    <string-array name="day_array">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="breakfast_txt">Breakfast:</string>
    <string name="lunch_txt">Lunch:</string>
    <string name="dinner_txt">Dinner:</string>

    //Recipes Screen
    <string name="title_txt">Title:</string>
    <string name="ingredients_txt">Ingredients:</string>
    <string name="directions_txt">Directions:</string>
    <string name="breakfast_check_box">B</string>
    <string name="lunch_check_box">L</string>
    <string name="dinner_check_box">D</string>
    <string name="add_new_txt">Add New</string>

    //Ingredients Screen
    <string name="ingredient_name_txt">Name:</string>
    <string name="unit_size_txt">Unit Size:</string>
    <string-array name="ingredient_name_array"></string-array>
    <string-array name="unit_size_array">
        <item>cup</item>
        <item>lb.</item>
        <item>oz.</item>
        <item>slice</item>
        <item>tbsp.</item>
        <item>tsp</item>
        <item>single</item>
    </string-array>
    <string name="new_ingredient">New Ingredient</string>
    <string name="new_unit_size">Add Size</string>

    //Add Ingredients Dialog Fragment
    <string name="enter_new_ingredient">Enter Ingredient Name</string>
    <string name="select_unit_size">Select Unit Size:</string>
    <string name="add_ingred_btn">Add Ingredient</string>
    <string name="add_ingred_cancel">Cancel</string>

    //Add Size Dialog Fragment
    <string name="enter_new_size">Enter Size Name</string>
    <string name="add_size_btn">Add Size</string>
    <string name="add_size_cancel">Cancel</string>


</resources>
