<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tsnichols.foodlab.HomeScreenActivity">

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/calender_btn"
        android:layout_marginTop="97dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:clickable="false"
        android:contentDescription="@string/calender_btn"
        android:onClick="goto_calender"
        android:background="@mipmap/calender_icon" />

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/recipes_btn"
        android:layout_marginRight="78dp"
        android:layout_marginEnd="78dp"
        android:layout_alignTop="@+id/calender_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/recipes_btn"
        android:onClick="goto_recipes"
        android:background="@mipmap/recipes_icon" />

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/groceries_btn"
        android:layout_marginTop="62dp"
        android:contentDescription="@string/groceries_btn"
        android:background="@mipmap/groceries_icon"
        android:layout_below="@+id/calender_btn"
        android:layout_alignLeft="@+id/calender_btn"
        android:layout_alignStart="@+id/calender_btn" />

    <ImageButton
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/ingredients_btn"
        android:layout_alignTop="@+id/groceries_btn"
        android:layout_alignLeft="@+id/recipes_btn"
        android:layout_alignStart="@+id/recipes_btn"
        android:contentDescription="@string/ingredients_btn"
        android:background="@mipmap/ingredients_icon" />
</RelativeLayout>
