<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/week_txt"
        android:id="@+id/txt_week"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="56dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/day_txt"
        android:id="@+id/txt_day"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/txt_week"
        android:layout_alignLeft="@+id/txt_week"
        android:layout_alignStart="@+id/txt_week" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/breakfast_txt"
        android:id="@+id/txt_breakfast"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/txt_day"
        android:layout_alignLeft="@+id/txt_day"
        android:layout_alignStart="@+id/txt_day" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lunch_txt"
        android:id="@+id/txt_lunch"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/txt_breakfast"
        android:layout_alignLeft="@+id/txt_breakfast"
        android:layout_alignStart="@+id/txt_breakfast" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dinner_txt"
        android:id="@+id/txt_dinner"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/txt_lunch"
        android:layout_alignLeft="@+id/txt_lunch"
        android:layout_alignStart="@+id/txt_lunch" />

    <ExpandableListView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/expListView_week"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@+id/txt_week"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false" />

    <ExpandableListView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/expListView_day"
        android:layout_alignTop="@+id/txt_day"
        android:layout_centerHorizontal="true" />

    <ExpandableListView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/expListView_breakfast"
        android:layout_alignTop="@+id/txt_breakfast"
        android:layout_centerHorizontal="true" />

    <ExpandableListView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/expListView_lunch"
        android:layout_alignTop="@+id/txt_lunch"
        android:layout_alignLeft="@+id/expListView_breakfast"
        android:layout_alignStart="@+id/expListView_breakfast" />

    <ExpandableListView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/expListView_dinner"
        android:layout_alignTop="@+id/txt_dinner"
        android:layout_centerHorizontal="true" />

</RelativeLayout>